= v0.5.10 - EDGE
* Impr: Checkbox replaced with tristate checkbox in multi-edit form in GridPanel.

= v0.5.9 - 2010-06-11
* !!!: after updating to this version, run script/generate netzke_basepack
* New: tri-state checkbox introduced into the search form
* Impr: better defaults for the search form
* Impr: GridPanel now displays the total amount of records
* Fix: GridPanel's "local filters" are back (they were out since the release of Ext 3.0)
* Impr: obey "preloaded" option for tabs better: really add the widgets into their respective tabs from the start
* Fix: datetime filters now also are take into account when searching in GridPanel is performed
* Fix: FieldsConfigurator should now work on Heroku
* Fix: GridPanel date filter now should work
* New: GridPanel now has a method on_data_changed that can be overridden by children to detect actions that modify data
* New: New way of configuring Netzke (virtual) attributes for AR models.
* Impr: Grid/FormPanel refactoring.
* Impr: Multi-level column/fields configuration reworked and made more consistent.
* New: New configuration layer introduced between the AR models and the rest of Netzke widgets. Use AttributesConfigurator to access it.
* New: FamFamFam Silk icons support.
* Impr: Reworked Netzke (virtual) attributes for Grid/FormPanel

= v0.5.8 - 2010-03-12
* Fix: GertThiel's method_missing-related fix enabling better compatibility with other Ruby libs
* Fix: acts_as_list runtime dependency

= v0.5.7 - 2010-02-26
* Regression: column config for GridPanel again accepts a renderer along with its parameters (as array, where the first element is the renderers name, the second - the parameters passed to the renderer, e.g.: :renderer => ["date", "y-m-d"])
* Fix: Window resize/move now works correctly
* Code: taking care of deprecated methods

= v0.5.6 - 2010-01-10
* Compatibility with latest netzke-core
* Compatibility with Ext JS v3.1
* Impr: Code reorganization